--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <div class="row">
                 <div class="col-md-12 text-center">
                     <div class="ads-col text-center">
-                        <a onclick="playAudio()" href="https://wa.link/qe3wer" target="__blank">
+                        <a onclick="playAudio()" href="https://wa.me/917422888888" target="__blank">
                             <img src="hanuman-_website.gif" class="img-fluid visit" alt="">
                         </a>
                     </div>
